tidied up, added interval to server and fb auth

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <script>
+  <!--<script>
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '1578557435779440',
@@ -25,7 +25,7 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-</script>
+</script>-->
   <div id="root"></div>
   <!--
       This HTML file is a template.
